# KRYCY_lab2_proj2

./: .gitignore  KRYCY_lab2_analityka.ipynb  KRYCY_lab2_ml.ipynb  README.md  krycy_lab.html  krycy_lab.md  pyproject.toml
