[project]
name = "krycy2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "nfstream>=6.5.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scapy>=2.6.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "typer>=0.13.1",
]
